javascipt needs fixed

--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -50,8 +50,8 @@
     </div>
 
     <div id="full_page_modal" class="minimized_modal"></div>
-    <span id="full_page_modal_close" class="hidden_close_button">
-        <i id="close_button_close_button" class="fas fa-times fa-3x"></i>
+    <span id="full_page_modal_close" class="minimized_close_button">
+        <i id="close_button_close_button" class="fas fa-times fa-2x"></i>
     </span>
 
 {% endblock %}
