--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -37,10 +37,17 @@
     problem-solving skills to attack any problem!</p>
     </div>
 
-   <div id="resume_page_img_div" class="minimized_resume_img_div">
+    <div id="resume_page_img_div" class="minimized_resume_img_div">
 
         <img id="resume_page_img_img" class="minimized_resume_img_img" src="{% static 'img/Jarret_Laberdee_Resume.jpg' %}" alt="Jarret Laberdee Resume" id="resume_page_img_img">
 
+    </div>
+
+    <div id="resume_page_download_resume_container">
+
+        <form id="resume_page_download_resume_form" action="{% url 'download_resume' %}" method="get">
+            <button id="resume_page_download_resume_button" class="btn" type="submit">Take a copy!</button>   
+        </form>
     </div>
 
     <div id="about_me_click_for_full_size_modal_container">
