--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -13,6 +13,7 @@
       integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
       crossorigin="anonymous"
     />
+    <link href="{% static 'css/hover.css' %}" rel="stylesheet" type="text/css" />
     <link
       href="https://fonts.googleapis.com/css?family=Merienda"
       rel="stylesheet"
@@ -23,7 +24,7 @@
   <body id="body_id">
     <div id="main_header_outer">
       <div id="main_header_inner">
-        <div id="main_header_left_half"><p>Hey, I'm Jarret</p></div>
+        <div id="main_header_left_half"><p>CarnsJalone</p></div>
         <div id="main_header_right_half">
           <a href="{% url 'home' %}" class="{% if navbar == 'home' %} active_header_link {% else %} inactive_header_link {% endif %}"><p>Home</p></a>
           <a href="{% url 'about_me' %}" class="{% if navbar == 'about_me' %} active_header_link {% else %} inactive_header_link {% endif %}"><p>About Me</p></a>
