about me syntax changes

--- a/Personal/Home/templates/about_me.html
+++ b/Personal/Home/templates/about_me.html
@@ -3,38 +3,93 @@
 
 {% block about_me %}
 
-    <div class="container">
+    <div class="standard_size">
         <ul id="about_me_page_ul">
+
+
             <li>
-                <h5>Personal Fulfillment</h5>
-                <p>Over the last 2.5 years I have become encapsulated in the world of
-                    software design. I am constantly taken back by how heavily the modern 
-                    world around us is shaped by technology, and it's in that same breath 
-                    that I want to be a contributor to that shaped world. 
+                <hr class="about_me_hr">
+                <h5 class="about_me_blue_text_highlight">Background</h5>
+                <hr class="about_me_hr">
+                <p>From a young age, I vividly recall being captivated by gadgetry. Due to my problem-solving nature and interest in how things work, I have always been the "go-to" guy for technologically-related issues (<i>primarily turning the router on and off again for 
+                family members</i>). I enjoy laying out a problem and taking incremental steps towards a solution. 
+                <br>
+                <br>
+                This is precisely the reason why software/web development has fit neatly into my bag of tricks. From the time I received my first N64 as a child to the current moment of me writing this <strong><i>&lt;p&gt;</i></strong> tag as an adult, I have been inquisitive with how smart people have 
+                translated 0's and 1's into the technological goods and services that envelop our lives.</p>
+            </li>
+
+            <hr class="about_me_hr">
+
+            <li>
+                <h5 class="about_me_blue_text_highlight">Personally Acquired Experience</h5>
+                <hr class="about_me_hr">
+
+                <p><strong>Front-End:</strong>
+                <br>
+                <br>
+                <i>HTML/CSS</i> - The power duo. While I feel very confident in my ability to convert a thought into a rendered product on a web page, I am constantly learning new tricks to improve my CSS. Having no background in 
+                graphical design, I sometimes struggle in imagining what is actually possible and transposing that into code. With enough time, I will domineer the languages.
+                <br>
+                <br>
+                <i>Javascript</i> - The most popular language of the web?? Javascript feels natural to me. This is actually the first language that I sat down to learn and now I'm beginning to discover its true power. From simple 
+                DOM manipulations to extensive data verification algorithms, I will hold Javascript close to me for the rest of my career. As a framework I typically use jQuery and I plan on picking up either Angular or React 
+                as additional tools for my arsenal.
+                </p>
+                <p><strong>Back-End:</strong>
+                <br>
+                <br>
+                <i>Python</i> - Oh the readability. With Python's human-readable syntax, the absorption of Python for me has been stunningly intuitive. While Python boasts the strength of being readable, the fact that it's an interpreted 
+                language as opposed to a compiled language (like Java) sometimes causes cryptic diagnosis when an error arises. The bulk of my projects requiring some behind-the-scenes computation have been done 
+                with Python. (Including this very project) I currently utilize Django as my primary framework. 
+                <br>
+                <br>
+                <i>Node.js</i> - Javascript's plunge into backend? Using Chrome's V8 Engine this is an extremely powerful language, especially for firing up a web server and displaying some pages. Node.js was the second 
+                language I invested any time into and I will definitely be returning to better familiarize myself with it. 
                 </p>
             </li>
+
+            <hr class="about_me_hr">
+
             <li>
-                <h5>Professional Goals</h5>
-                <p>I've been in a professional setting for about 4 years. I have managed 
-                    upwards of 75 employees in a professional, manufacturing setting. I 
-                    have worked in systems integrations, process enhancment and manpower 
-                    allocation. 
+                <h5 class="about_me_blue_text_highlight">Professionally Acquired Experience</h5>
+                <hr class="about_me_hr">
+
+                <p> Since my hire in February of 2015, I have worked very intimately with our Enterprise Resource Planning systems here at Fiat Chrysler 
+                Automobiles. Being an employee in the Logistics department, we work within an IBM-developed operating system (z/OS) using a zSeries terminal emulator (TN3270) across telnet 
+                protocol. We use this IBM mainframe emulator to access a large data reservoir somewhere within the company. This serves us as the main resource for managing our internal/external 
+                inventory/receiving levels and our internal/external delivery systems. 
+                <br>
+                <br>
+                While working with the mainframe has some perks, including the amount of traffic it can handle (apparently ~2.5 billion 
+                transacions per day according to IBM), I believe my future exists working within the client/server architecture. While I admittedly don't know all the differences between the two, 
+                I truthfully don't think it's a worthwhile investment to learn a language like COBOL for my application needs.
                 </p>
             </li>
+
+            <hr class="about_me_hr">
+
             <li>
-                <h5>Experience</h5>
-                <p>For the last 4 years I've worked for Fiat Chrysler Automobiles. I 
-                    started out as a line supervisor, and slowly worked my way into an 
-                    data-based analysis role with my technological saavy. 
-                </p>
+                <h5 class="about_me_blue_text_highlight">Technological Goals</h5>
+                <hr class="about_me_hr">
+
+                <p>For me, the data-driven intertwinement between man and machine transcends more than mere curiousity. For me, it is a responsibility to adapt and evolve in order to stay current. With data being an ever-more 
+                valuable currency in today's day and age, in my opinion there will be left two groups of people: Those whose job it is to automate, 
+                and those whose job's have been automated. I, personally, want to be the one to automate. This ideology has really propelled me towards coding and, more generally, computing. 
+
             </li>
+
+            <hr class="about_me_hr">
+
+            <li>
+                <h5 class="about_me_blue_text_highlight">Resume</h5>
+                <hr class="about_me_hr">
+                <p>I've attached a copy of my resume below. While it doesn't reflect all of my personal accomplishments as nicely as I'd like, feel free to take a copy with you on your search for the right employee.</p>
+
+            </li>
+
         </ul>
    
-    </div>
-
-    <div class="container">
-    <p>Take a look at my resume below. You'll find that I have the necessary 
-    problem-solving skills to attack any problem!</p>
     </div>
 
     <div id="resume_page_img_div" class="minimized_resume_img_div">
