--- a/Personal/Home/templates/base.html
+++ b/Personal/Home/templates/base.html
@@ -34,6 +34,16 @@
       </div>
     </div>
 
+    <div id="left_window_border"></div>
+    <div id="right_window_border"></div>
+    
+    <div id="left_window_border_box_shadow"></div>
+    <div id="right_window_border_box_shadow"></div>
+
+    <div id="left_curved_cover"></div>
+    <div id="right_curved_cover"></div>
+  
+
     {% block home %}{% endblock %} 
     {% block resume %}{% endblock %}
     {% block about_me %}{% endblock %}
